--- a/Try 3_Hourly load.qmd
+++ b/Try 3_Hourly load.qmd
@@ -192,20 +192,29 @@ Model1_scores <- accuracy(ETS_fit$mean,ts_load_test)
 Produce the output
 
 ```{r}
-#forecast, only from Jan 1 to Feb 28, 2011
+# Hourly forecast
 Model1_for <- stlf(ts_load,h=59*24)
+
+# Convert the hourly forecast to a data frame
+Model1_hourly <- data.frame(hour = 1:(59 * 24), forecast = as.vector(Model1_for$mean))
+
+# Calculate the daily mean forecast
+Model1_daily <- Model1_hourly %>%
+  mutate(day = ceiling(hour / 24)) %>%
+  group_by(day) %>%
+  summarise(daily_mean = mean(forecast))
 
 #create the date sequence
 date_for <- seq(as.Date("2011-01-01"), length.out = 59, by = "day")
 
 # Create a data frame with date and load columns
-Model1_output <- data.frame(date = date_for, load = Model1_for$mean)
+Model1_output <- data.frame(date = date_for, load = Model1_daily$daily_mean)
 
 # round the number since Kaggle requires only integers
 Model1_output$load <- round(Model1_output$load, 0)
 
 # Write the data frame to a csv file
-write.csv(Model1_output, "./Output/first_model.csv", row.names = FALSE)
+write.csv(Model1_output, "./Output/Try3_model1.csv", row.names = FALSE)
 ```
 
 ####Model 1.1: Try including just one seasonal period, i.e., 365.25 \*Comment from Kassie: 1) I tried only 7, and it didn't work very well, so I changed to only try 365.25 2) I followed Luana's code to compare RMSE just for convenience, but we could change to other metrics later
