--- a/Try 3_Hourly load.qmd
+++ b/Try 3_Hourly load.qmd
@@ -204,6 +204,8 @@ Model1_daily <- Model1_hourly %>%
   group_by(day) %>%
   summarise(daily_mean = mean(forecast))
 
+rm(Model1_hourly)
+
 #create the date sequence
 date_for <- seq(as.Date("2011-01-01"), length.out = 59, by = "day")
 
@@ -217,12 +219,12 @@ Model1_output$load <- round(Model1_output$load, 0)
 write.csv(Model1_output, "./Output/Try3_model1.csv", row.names = FALSE)
 ```
 
-####Model 1.1: Try including just one seasonal period, i.e., 365.25 \*Comment from Kassie: 1) I tried only 7, and it didn't work very well, so I changed to only try 365.25 2) I followed Luana's code to compare RMSE just for convenience, but we could change to other metrics later
+####Model 1.1: Try including just one seasonal period, i.e., 365.25
 
 ```{r}
 #create a time series only for the load data
-ts_load_1.1 <- combined[,1] %>%
-  msts(seasonal.periods = 365.25, start = c(2005, 1, 1))
+ts_load_1.1 <- load_processed$consumption %>%
+  msts(seasonal.periods = 365.25*24, start = c(2005, 1, 1, 0))
 
 #decompose the data and plot
 ts_load_1.1 %>% mstl() %>%
@@ -240,33 +242,12 @@ ts_load_test_1.1 <- subset(ts_load_1.1,
 #Fit and forecast STL + ETS model to data
 ETS_fit_1.1 <- stlf(ts_load_train_1.1,h=n_forecast)
 
-#Plot foresting results
-autoplot(ETS_fit_1.1) + 
-  ylab("Active Power")
-
 #Plot model + observed data
 autoplot(ts_load_1.1) +
   autolayer(ETS_fit_1.1, series= "STL + ETS (season: only 365)", PI = FALSE) +
   ylab("Active Power")
 
-#Check accuracy
-Model1.1_scores <- accuracy(ETS_fit_1.1$mean,ts_load_test_1.1)
-
-#Compare with Model 1
-#create data frame
-scores <- as.data.frame(
-  rbind(Model1_scores, Model1.1_scores)
-  )
-
-row.names(scores) <- c("STL+ETS", "STL + ETS (season: only 365)")
-
-print(scores)
-
-#choose model with lowest RMSE
-#MAYBE
-best_model_index <- which.min(scores[,"RMSE"])
-
-cat("The best model by RMSE is:", row.names(scores[best_model_index,]))      
+#visual inspection could confirm it's not improving model 1, so quit
 
 ```
 
